# mepd

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: about.md  api.md  cli.md  concepts.md  elementarystep.md  engines.md  index.md  inputs.md  installation.md  tutorial.md
examples/: 01_simple_neb.py  02_climbing_image_neb.py  03_msmep.py  04_custom_convergence.py  example_inputs.toml  neb_inputs.toml  water.xyz  water2.xyz
mepd/: Janitor.py  NetworkBuilder.py  OBH.py  TreeNode.py  __init__.py  arbalign.py  chain.py  chainhelpers.py  convergence_helpers.py  d3_tools.py  default_inputs.toml  elementarystep.py  errors.py  helper_functions.py  inputs.py  irc_network.py  kmc.py  molecule.py  msmep.py  neb.py  pot.py  prfo.py  qcio_structure_helpers.py  solvator.py
mepd/dynamics/: chainbiaser.py
mepd/engines/: __init__.py  ase.py  engine.py  flower.py  gxtb.py  leps.py  qcop.py  threewell.py
mepd/geodesic_interpolation2/: coord_utils.py  interpolation.py  morsegeodesic.py
mepd/mlp_geodesic/: optimizer.py  path_tools.py
mepd/nodes/: node.py  nodehelpers.py
mepd/optimizers/: adam.py  amg.py  cg.py  fire.py  gd.py  lbfgs.py  optimizer.py  sgd.py  vpo.py
mepd/pathminimizers/: dimer.py  fneb.py  geometric_neb.py  mlpgi.py  nebdlf.py  pathminimizer.py
mepd/scripts/: _cli_results.py  _cli_runtime.py  _cli_visualize.py  main_cli.py  optimize_convergence.py  progress.py
tests/: test_all.py  test_ascii_plot_labels.py  test_ase_hessian.py  test_ase_irc.py  test_chainbiaser.py  test_chainhelpers_geodesic.py  test_check_elem_step_cli.py  test_cli_logging.py  test_cli_nan_fallback_writer.py  test_convergence_helpers.py  test_elementarystep.py  test_elementarystep_geom_opt.py  test_elemstep_comparison_collection.py  test_engine_default_hessian.py  test_errors.py  test_geodesic_seed.py  test_gxtb_engine.py  test_inputs.py  test_isomorphism_tools.py  test_make_default_inputs_cli.py  test_msmep_linear_interpolation.py  test_neb_adaptive_resolution.py  test_neb_climbing_image_refine.py  test_neb_energy_profile_warning.py  test_nebdlf.py  test_network_builder.py  test_nodehelpers_update_cache.py  test_openbabel_logging.py  test_optimizers.py  test_parse_nma_freq_data.py  test_pot_creation.py  test_progress_smiles_guard.py  test_public_toml_inputs.py  test_qcop_geomopt_keywords.py  test_qcop_local_parallel.py  test_qcop_nanoreactor.py  test_run_irc_cli.py  test_run_network_completion_cli.py  test_run_refine_helpers.py  test_snap_assign_cli.py  (+1 more)
